prevent horizontal scroll

--- a/stylesheets/custom.bootstrap.scss
+++ b/stylesheets/custom.bootstrap.scss
@@ -73,6 +73,10 @@ main {
   }
 }
 
+#main-content {
+  overflow: hidden;
+}
+
 footer {
   margin-top: 12vw;
 
